Fix double scrollbar on the query tool results grid.

--- a/web/pgadmin/tools/sqleditor/static/css/sqleditor.css
+++ b/web/pgadmin/tools/sqleditor/static/css/sqleditor.css
@@ -423,3 +423,7 @@ input.editor-checkbox:focus {
 .geometry-viewer-info-control i{
   margin: 0 0 0 4px;
 }
+
+.hide-vertical-scrollbar {
+  overflow-y: hidden;
+}
